--- a/sections/bf-bundle-sections.liquid
+++ b/sections/bf-bundle-sections.liquid
@@ -17,7 +17,7 @@
         <div class="bf-bundle-banner-content">
             <div class="limited-edition-label"><span>Limited Edition!</span></div>
             <h5>Special bundle: Science helps you get pregnant faster</h5>
-            <h1>Get 7 Fertility Items for Less</h1>
+            <h1>Get 6 Fertility Items for Less</h1>
             <p>This set includes everything you need to reach your fertility goals from home!</p>
             <div class="bf-price-row">
                 <span class="plat-price">{{ all_products['get-pregnant-bundle'].price | money }}</span>
@@ -33,7 +33,102 @@
         </div>
     </div>
 </section>
-<section class="inside-bundle-sec wands-inside-product-sec">
+
+<section class="inside-bundle-sec wands-inside-product-sec bundle-without-tea">
+    <div class="container">
+        <div class="bf-bundle-page-title text-center">
+            <h2>What’s inside the bundle?</h2>
+        </div>
+       <ul>
+            <li>
+                <div class="inside-bundle-item bf-light-grey-bg">
+                    <div class="inside-bundle-item-top">
+                        <h3>The Mira Hormone Monitor</h3>
+                        <p>Predict & Confirm Ovulation</p>
+                    </div>
+                    <div class="inside-sec-img">
+                        <img src="https://cdn.shopify.com/s/files/1/0777/1006/5971/files/mira_analyzer.png?v=1699216613" alt="">
+                    </div>
+                    <div class="inside-bundle-item-bottom">
+                        <p>The most trusted hormone monitor on the market.</p>
+                    </div>
+                    <a href="{{ sub_folder }}/products/fertility-max-starter-kit" class="bf-bundle-arrow-btn" target="_blank"><img src="https://cdn.shopify.com/s/files/1/0777/1006/5971/files/bf-arrow-btn.svg?v=1698846246" alt=""></a>
+                </div>
+            </li>
+            <li>
+                <div class="inside-bundle-item bf-light-grey-bg">
+                    <div class="inside-bundle-item-top">
+                        <h3>Personalized Fertility Coaching</h3>
+                        <p>Live support from Mira’s expert</p>
+                    </div>
+                    <a href="{{ sub_folder }}/products/coaching" class="bf-bundle-arrow-btn" target="_blank"><img src="https://cdn.shopify.com/s/files/1/0777/1006/5971/files/bf-arrow-btn.svg?v=1698846246" alt=""></a>
+                    <div class="inside-sec-img">
+                        <img src="https://cdn.shopify.com/s/files/1/0777/1006/5971/files/card-2.png?v=1704873862" alt="">
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="inside-bundle-item bf-light-green-bg">
+                    <div class="inside-bundle-item-top">
+                        <h3>Mira Prenatal Vitamins</h3>
+                        <p>Support a healthy conception*</p>
+                    </div>
+                    <a href="{{ sub_folder }}/products/prenatal-multivitamin" class="bf-bundle-arrow-btn" target="_blank"><img src="https://cdn.shopify.com/s/files/1/0777/1006/5971/files/bf-arrow-btn.svg?v=1698846246" alt=""></a>
+                    <div class="inside-sec-img">
+                        <img src="https://cdn.shopify.com/s/files/1/0777/1006/5971/files/prenatal_vitamins.png?v=1699216613" alt="">
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="inside-bundle-item purple-bg">
+                    <div class="inside-bundle-item-top">
+                        <h3>20x Mira Max Fertility Wands</h3>
+                        <p>Predict & Confirm Ovulation</p>
+                    </div>
+                    <div class="inside-sec-img">
+                        <img src="https://cdn.shopify.com/s/files/1/0777/1006/5971/files/Fertility_Max_Wan.png?v=1699038879" alt="">
+                    </div>
+                    <div class="inside-bundle-item-bottom">
+                        <p>Use the wands to track key fertility hormones LH, E3G, PdG at once—using the Mira Hormone Monitor.</p>
+                    </div>
+                    <a href="{{ sub_folder }}/products/mira-max-test-wands" class="bf-bundle-arrow-btn" target="_blank"><img src="https://cdn.shopify.com/s/files/1/0777/1006/5971/files/bf-arrow-btn.svg?v=1698846246" alt=""></a>
+                </div>
+            </li>
+         <li>
+                <div class="inside-bundle-item last bf-light-grey-bg">
+                    <div class="inside-bundle-item-top">
+                        <h3><span class="inside-badge">Free</span> Silicone Urine Cup</h3>
+                    </div>
+                    <div class="inside-sec-img-2 ">
+                        <img src="https://cdn.shopify.com/s/files/1/0777/1006/5971/files/card-5.png?v=1704875795" alt="" style="width:100%;border-radius: 30px;margin-top: 10px;">
+                    </div>
+                </div>
+            </li>
+          
+          <li>
+                <div class="inside-bundle-item last bf-dark-yellow-bg">
+                    <div class="inside-bundle-item-top">
+                        <h3><span class="inside-badge">Free</span> The Mira App</h3>
+                    </div>
+                    <a href="https://www.miracare.com/mira-app/" class="bf-bundle-arrow-btn" target="_blank"><img src="https://cdn.shopify.com/s/files/1/0777/1006/5971/files/bf-arrow-btn.svg?v=1698846246" alt=""></a>
+                    <div class="inside-sec-img-2 mt-70">
+                        <img src="https://cdn.shopify.com/s/files/1/0777/1006/5971/files/card-6.png?v=1704875628" alt="">
+                    </div>
+                </div>
+            </li>
+        </ul>
+
+    </div>
+
+    <div class="inside-bundle-caption-text">
+        <div class="container">
+            <p>*These statements have not been evaluated by the Food and Drug Administration. This product is not intended to diagnose, treat, cure, or prevent any disease.</p>
+        </div>
+    </div>
+</section>
+
+
+<section class="inside-bundle-sec wands-inside-product-sec" style="display:none !important;">
     <div class="container">
         <div class="bf-bundle-page-title text-center">
             <h2>What’s inside the bundle?</h2>
@@ -183,7 +278,7 @@
             </div>
         </div>
         <div class="quality-matters-caption text-center">
-            <p>* Applied to Mira Fertility Tea and Mira Prenatal Vitamins.<br>
+            <p>* Applied to Mira Prenatal Vitamins.<br>
                 ** Mira Hormone Monitor is FDA-listed. Mira Prenatal Vitamins is produced by FDA registered facility.<br>
                 *** Applied to Mira Prenatal Vitamins.</p>
         </div>
@@ -363,7 +458,7 @@
         </div>
     </div>
 </div>
-<div class="simple-wand-sec wants-bundle-img-sec practical-steps-sec reverse-md padd-b-30 padd-t-30 coaching-img-with-desc-4">
+<div class="simple-wand-sec wants-bundle-img-sec practical-steps-sec reverse-md padd-b-30 padd-t-30 coaching-img-with-desc-4" style="display:none !important;">
     <div class="container">
         <div class="row">
             <div class="col-md-7 order-2 order-md-1">
@@ -416,7 +511,7 @@
                     <div class="panorama-lab-test-heading-1">
                         <h2>Get this exclusive Bundle and get pregnant faster</h2>
                     </div>
-                    <p>Only the right tools help you reach your fertility goals with confidence. Buy now and get all 7 items for less!</p>
+                    <p>Only the right tools help you reach your fertility goals with confidence. Buy now and get all 6 items for less!</p>
                     <div class="bf-bundle-banner-btn">
                         <div class="bf-price-row">
                             <span class="plat-price">{{ all_products['get-pregnant-bundle'].price | money }}</span>
