--- a/snippets/shop-all-tab.liquid
+++ b/snippets/shop-all-tab.liquid
@@ -15,6 +15,7 @@
 
 <div class="shop-all-tab-bar">
     <ul>
+      <li><a href="" {% if request.path contains '/en-int/products/best-sellers' %}class="shop-all-active"{% endif %}>Best Sellers</a></li>
       <li><a href="{{ sub_folder }}/products/" {% if request.path == '/products' or request.path == '/' %}class="shop-all-active"{% endif %}>Shop all</a></li>
             
 
