change the id to class
-change id to css class
-adjust font size tittle of card
-css visual fix from card

--- a/sections/product-list-all.liquid
+++ b/sections/product-list-all.liquid
@@ -29,7 +29,7 @@
         </div>
         <div
           id="productlist"
-          class="row accessories-product-list bundles-product-list shop-all-slider arrow-slider-nav"
+          class="row accessories-product-list bundles-product-list shop-all-slider arrow-slider-nav col-grid"
         >
           {% if localization.market.handle == 'us' %}
             <div class="col-md-12">
@@ -187,7 +187,7 @@
         </div>
         <div
           id="productlist"
-          class="row accessories-product-list bundles-product-list shop-all-slider arrow-slider-nav"
+          class="row accessories-product-list bundles-product-list shop-all-slider arrow-slider-nav col-grid"
         >
           <div class="col-md-12">
             <div class="product-col">
@@ -350,7 +350,7 @@
         <div class="heading-1 padd-m-t-0 text-left">
           <h3>Virtual Consultations</h3>
         </div>
-        <div id="productlist" class="row accessories-product-list bundles-product-list">
+        <div id="productlist" class="row accessories-product-list bundles-product-list col-grid">
           <div class="col-md-4">
             <div class="product-col">
               <div class="product-img-col">
@@ -378,7 +378,7 @@
         <div class="heading-1 padd-m-t-0 text-left">
           <h3>Male Fertility</h3>
         </div>
-        <div id="productlist" class="row accessories-product-list bundles-product-list">
+        <div id="productlist" class="row accessories-product-list bundles-product-list col-grid">
           {% if localization.market.handle == 'international'
             or localization.market.handle == 'us'
             or localization.market.handle == 'au'
@@ -445,7 +445,7 @@
         </div>
         <div
           id="productlist"
-          class="row accessories-product-list bundles-product-list shop-all-slider arrow-slider-nav"
+          class="row accessories-product-list bundles-product-list shop-all-slider arrow-slider-nav col-grid"
         >
           {% if localization.market.handle == 'us' %}
             <div class="col-md-12">
