--- a/templates/product.male_fertility.liquid
+++ b/templates/product.male_fertility.liquid
@@ -21,7 +21,7 @@
         <div class="heading-1 padd-m-t-0 text-left">
           <h3>Male Fertility</h3>
         </div>
-        <div id="productlist" class="row accessories-product-list bundles-product-list">
+        <div id="productlist" class="row accessories-product-list bundles-product-list col-grid">
           {% if localization.market.handle == 'international'
             or localization.market.handle == 'us'
             or localization.market.handle == 'au'
