--- a/templates/product.more_for_fertility.liquid
+++ b/templates/product.more_for_fertility.liquid
@@ -23,7 +23,7 @@
             <h3>More for Fertility</h3>
           </div>
         </div>
-        <div id="productlist" class="row accessories-product-list bundles-product-list">
+        <div id="productlist" class="row accessories-product-list bundles-product-list col-grid">
           {% if localization.market.handle == 'us' or localization.market.handle == 'shop' %}
             <div class="col-md-4">
               <div class="product-col">
