--- a/assets/style.css
+++ b/assets/style.css
@@ -19634,13 +19634,39 @@ footer.cart__footer #md-footer-selector-block {
 }
 
 @media screen and (max-width: 767px) {
-    #productlist {
+    .col-grid {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
     }
 
     .product-price-col {
         flex-wrap: nowrap;
+    }
+
+    .product-col .btn-custom {
+        padding: 0px 20px;
+        font-size: 14px;
+    }
+
+    .new-layout-listing .product-listing-sec .plat-price {
+        font-size: 14px;
+    }
+
+    .plat-price {
+        margin-right: 20px !important;
+    }
+
+    .new-layout-listing .accessories-product-list .product-col p {
+        margin-bottom: 0;
+        min-height: 46px;
+    }
+
+    .accessories-product-list .product-col h4 {
+        min-height: 46px;
+    }
+
+    .new-layout-listing .product-col h4 {
+        font-size: 18px;
     }
 
 }
