--- a/templates/product.virtual_consultations.liquid
+++ b/templates/product.virtual_consultations.liquid
@@ -21,7 +21,7 @@
         <div class="heading-1 padd-m-t-0 text-left">
           <h3>Virtual Consultations</h3>
         </div>
-        <div id="productlist" class="row accessories-product-list bundles-product-list">
+        <div id="productlist" class="row accessories-product-list bundles-product-list col-grid">
           <div class="col-md-4">
             <div class="product-col">
               <div class="product-img-col">
