--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -130,7 +130,8 @@
                             <div class="dropdown-menu order-now-menu-box" aria-labelledby="dropdownMenuButton1">
                                 <div class="order-now-title"><span>Shop Now</span> <a href="#" class="order-now-close"><img src="{{ 'side_menu_close.svg' | file_url }}" alt="{{ icon | escape }}" title="" /></a></div>
                                 <ul class="dropdown-menu-inner">
-                                    <li class="best-sellers"><a class="dropdown-item" href="">Best Sellers</a></li>
+
+                                    <li class="best-sellers"><a class="dropdown-item" href="/collections/best-sellers">Best Sellers</a></li>
                                     <li><a class="dropdown-item" href="{{ sub_folder }}/products/">Shop All</a></li>
 
                                     
