add banner to best sellers section

--- a/sections/best-sellers.liquid
+++ b/sections/best-sellers.liquid
@@ -13,6 +13,8 @@
 {% assign sub_folder = '' %}
 {% endif %}
 
+{% render 'vanmeter' %}
+
 <div class="product-listing-page new-layout-listing padd-t-b-60">
     <div class="product-listing-sec">
         <div class="container">
