ad sub_folder to product card

--- a/sections/best-sellers.liquid
+++ b/sections/best-sellers.liquid
@@ -104,7 +104,7 @@
                     <div class="col-md-4">
                         <div class="product-col">
                             <div class="product-img-col">
-                                <a href="/products/basal-body-thermometer"><img
+                                <a href="{{ sub_folder }}/products/basal-body-thermometer"><img
                                         src="{{ 'bbt-shop.png' | file_img_url: '' }}"
                                         alt="" /></a>
                                 <span class="offer-badge mira-green-badge main-pro-img-badge">
@@ -117,7 +117,7 @@
                                     <i>SALE</i>
                                 </span>
                             </div>
-                            <h4><a href="/products/basal-body-thermometer">{{
+                            <h4><a href="{{ sub_folder }}/products/basal-body-thermometer">{{
                                     all_products['basal-body-thermometer'].title }}</a></h4>
                             <p>({{ all_products['basal-body-thermometer'].metafields.product_fields.sub_title }})
                             </p>
@@ -128,7 +128,7 @@
                                     <div class="old-price">{{
                                         all_products['basal-body-thermometer'].compare_at_price | money }}</div>
                                 </div>
-                                <a href="/products/basal-body-thermometer"
+                                <a href="{{ sub_folder }}/products/basal-body-thermometer"
                                     class="btn-custom btn-pink">Buy now</a>
                             </div>
                         </div>
