fix template title

--- a/templates/product.best-sellers.liquid
+++ b/templates/product.best-sellers.liquid
@@ -20,7 +20,7 @@
             <div class="product-list-row badge-row-sec">
                 <div class="heading-1 padd-m-t-0 text-left">
                     <div class="with-arrow-btn">
-                        <h3>{{ collection.title }}</h3>
+                        <h3>Best Sellers</h3>
                     </div>
                 </div>
                 <div class="row accessories-product-list bundles-product-list">
